fix: Heading invisible on first time page load

--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,6 @@ body {
 #banner {
     margin: 10px auto;
     text-align: center;
-    display: none;
 }
 
 .banner-matrix-cell-default {
